<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">jobpedia</string>
    <string name="hello_world">Hello world!</string>
    <string name="tab_joblist">職位</string>
	<string name="tab_apply_record">已申請</string>
	<string name="tab_inbox">訊息</string>
	<string name="tab_self">我</string>
	<string name="title_applied">已申請職位</string>
	<string name="title_message">訊息</string>
	<string name="title_self">我</string>

	<string name="applied_apply">已申請</string>
	<string name="applied_passed">通過</string>
	<string name="applied_refused">已拒絕</string>
	<string name="job_search_hint">職位名稱、職位描述</string>
	<string name="job_filter_done">完成</string>
	<string name="job_filter_sort">排序</string>
	<string name="sort_type_date">發佈日期</string>
	<string name="sort_type_salary">薪資</string>
	<string name="sort_type_distance">距離</string>
	<string name="job_filter_refilter">重新篩選</string>
	<string name="job_filter_schedule">工作類型</string>
	<string name="filter_schedule_temp">臨時工</string>
	<string name="filter_schedule_part">兼職</string>
	<string name="filter_schedule_full">全職</string>
	<string name="filter_schedule_title">工作類型</string>
	<string name="filter_distance_title">最遠距離</string>
	<string name="filter_distance_any">ANY</string>
	<string name="filter_distance_mi2">2 MI</string>
	<string name="filter_distance_mi5">5 MI</string>
	<string name="filter_distance_mi10">10 MI</string>
	<string name="filter_distance_mi25">25 MI</string>
	<string name="filter_pay_title">小時薪水</string>
	<string name="filter_pay_size">$0</string>
	<string name="filter_industries_title">行業類別</string>
	<string name="default_user_name">未知姓名</string>
	<string name="default_user_title">未知職稱</string>
	<string name="default_user_profile">\ \ \ \ 英文简历是使用英文写的简历。英文简历（resume）并无固定不变的单一形式，应聘者完全可以根据个人的具体情况来确定采用何种形式，灵活设计。English Resume 一般来说，根据个人经历的不同侧重点，...</string>
	<string name="test_item_title">我的XX</string>
	<string name="test_item_description">我也不知道这要怎么写</string>
	<string name="self_my_resume">我的簡歷</string>
	<string name="self_resume_description">請完善好基本信息和個人簡歷</string>
	<string name="self_my_video">我的視頻</string>
	<string name="self_video_description">秀下你，你會被看中的機會越多哦！</string>
	<string name="self_my_settings">系統設置</string>
	<string name="self_settings_description">更改語言，訊息推送，隱私設置等</string>
	<string name="my_resume">簡歷</string>
	<string name="my_resume_title">簡歷</string>
	<string name="my_resume_action_save">保存</string>
	<string name="resume_user_name">姓名</string>
	<string name="resume_user_phone">手機號</string>
	<string name="resume_job_name">職位</string>
	<string name="resume_area">地區</string>
	<string name="resume_address">地址</string>
	<string name="resume_email">EMAIL</string>
	<string name="resume_name_hint">請輸入您的姓名</string>
	<string name="resume_phone_hint">請輸入您的手機號</string>
	<string name="resume_job_hint">請填寫您的工作類型</string>
	<string name="resume_address_hint">請填寫您的工作地址</string>
	<string name="resume_email_hint">請填寫您的Email</string>
	<string name="resume_profile">簡介</string>
	<string name="self_login_text">登錄</string>
	<string name="login_with_phone">手機號登錄</string>
	<string name="register_with_phone">手機號註冊</string>
	<string name="jobinfo_description">職位描述</string>
	<string name="jobinfo_btn_apply">申請</string>
	<string name="jobinfo_worktype">工作類型</string>
	<string name="jobinfo_salary">小時薪水</string>
	<string name="jobinfo_distribute">發佈</string>
	<string name="jobinfo_format_salary">HK$%s</string>
	<string name="login_phone_number_hint">手機號碼</string>
	<string name="login_password">密碼</string>
	<string name="login_submit">登錄</string>
	<string name="logining">正在登錄</string>
	<string name="login_succeed">登錄成功</string>
	<string name="register_phone_has_exist">手機號已存在</string>
	<string name="register_succeed">註冊成功！</string>
	<string name="register_right_action">註冊</string>
	<string name="login_get_resume_info_failed">獲取用戶信息失敗</string>
	<string name="self_right_action_logout">註銷</string>
	<string name="self_right_action_login">登錄</string>
	<string name="self_logout_alter">確認註銷？</string>
	<string name="resume_upload">正在更新簡歷</string>
	<string name="resume_upload_failed">簡歷更新失敗！</string>
	<string name="resume_upload_succeed">簡歷更新成功！</string>
	<string name="jobinfo_appling">正在申請...</string>
	<string name="tips_apply_failed">申請失敗</string>
	<string name="tips_apply_succeed">申請成功</string>
	<string name="tips_apply_applied_already">申請失敗，職位已經被申請</string>
	<string name="inbox_descrptio_recommand">還有0個職位推薦未查看</string>
	<string name="inbox_title_recommand">推薦職位</string>
	<string name="inbox_title_hr_message">人事來信</string>
	<string name="inbox_descrption_hr_message">還有20封來信未處理</string>
	<string name="resume_last_name">Last Name</string>
	<string name="resume_first_name">First Name</string>
	<string name="resume_age">年齡</string>
	<string name="resume_sex">性別</string>
	<string name="tips_login_first">請先登錄...</string>
	<string name="joblist_salary">HK$%1$s</string>
	<string name="applied_need_login">請先登錄</string>
	<string name="applied_empty">数据为空</string>
	<string name="job_search_local_hint">地址</string>
	<string name="spinner_item_choose">请选择</string>
	<string name="job_search_submit">搜索</string>
	<string name="joblist_recommend_tag">推薦</string>
	<string name="common_text_system_exit_msg">再按一次退出程序</string>
	<string name="applied_empty_history">已申請記錄為空</string>
	<string name="passed_empty_histroy">已通過記錄為空</string>
	<string name="login_failed">登錄失敗，用戶名或密碼不正確</string>
	<string name="login_password_confrom">確認密碼</string>
	<string name="register_password_match_failed">密碼不匹配</string>
	<string name="register_password_empty">密碼或確認密碼不能為空</string>
	<string name="apply_view_jobs">查看職位</string>
	<string name="apply_btn_login">登錄</string>
	<string name="apply_unlogin_detail">登錄后可查看您的申請記錄，如果您還沒有一個賬戶，現在去註冊并申請符合您的職位</string>
	<string name="apply_unlogin_title">我的申請記錄</string>
	<string name="joblist_search_keywords">關鍵字：%1$s</string>
	<string name="joblist_search_industry">行業：%1$s</string>
	<string name="joblist_empty_tips1">沒有找到相關職位</string>
	<string name="joblist_empty_tips2">嘗試輸入其他條件</string>
	<string name="inbox_unlogin_title">我的訊息</string>
	<string name="inbox_unlogin_detail">登錄后可查看您的訊息，如果您還沒有一個賬戶，現在去註冊并申請符合您的職位</string>
	<string name="job_search_industry_all">所有行業</string>
	<string name="login_forget_psw">忘記密碼</string>
	<string name="login_title">登錄</string>
	<string name="register_title">註冊</string>
	<string name="forget_description">輸入您的手機號，密碼將發送到您的手機。</string>
	<string name="cancel">取消</string>
	<string name="send_sms">發送</string>
	<string name="forget_content_hint">手機號</string>
	<string name="send_succed">發送成功</string>
	<string name="send_failed">發送失敗</string>
	<string name="login_send_sms">發送驗證碼</string>
	<string name="login_send_sms_timer">發送驗證碼(%ds)</string>
	<string name="forget_check_code_hint">驗證碼</string>
	<string name="register_invalide_phone_number">手機號必須為8位數字</string>
	<string name="register_empty_checkcode">驗證碼不能為空</string>
	<string name="register_invalide_checkcode">驗證碼不正確</string>
	<string name="register_password_too_short">密碼長度不能少於6位</string>
	<string name="jobinfo_btn_apply_applied">已申請</string>
	<string name="self_photo_upload_succeed">上傳頭像成功</string>
	<string name="self_photo_upload_failed">上傳頭像失敗</string>
	<string name="network_invalid">網絡連接失敗</string>
	<string name="joblist_tip_loading">正在加載...</string>
	<string name="tips_load_failed">加載失敗...</string>
	<string-array name="spinner_items">
		<item>@string/spinner_item_choose</item>
	</string-array>
</resources>
