<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
    android:paddingBottom="10dp">
    <TextView
        android:id="@+id/login_forget_psw"
        android:text="@string/login_forget_psw"
        android:layout_gravity="right"
        android:layout_marginRight="2dp"
        android:paddingTop="8dp"
        android:paddingBottom="4dp"
        android:textSize="14sp"
        android:textColor="@drawable/login_forget_psw_selector"
        android:clickable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/login_username"
        android:layout_marginTop="4dp"
        android:textSize="16sp"
        android:hint="@string/login_phone_number_hint"
        android:background="@color/gray_eeeeee"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/forget_check_code"
        android:visibility="gone"
        android:layout_marginTop="1dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/forget_check_code_edit"
            android:background="@color/gray_eeeeee"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:textSize="16sp"
            android:hint="@string/forget_check_code_hint"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/forget_check_code_btn"
            android:background="@color/white_33ffffff"
            style="@android:style/Widget.ActionButton"
            android:minHeight="0dp"
            android:textColor="@color/forget_send_selector"
            android:text="@string/login_send_sms"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <EditText
        android:layout_marginTop="1dp"
        android:id="@+id/login_password"
        android:inputType="textPassword"
        android:background="@color/gray_eeeeee"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:textSize="16sp"
        android:hint="@string/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:layout_marginTop="1dp"
        android:id="@+id/login_password_confrom"
        android:inputType="textPassword"
        android:textSize="16sp"
        android:background="@color/gray_eeeeee"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:visibility="gone"
        android:hint="@string/login_password_confrom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_marginTop="80dp"
        android:id="@+id/login_btn"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/login_submit"
        android:textColor="@color/white_ffffff"
        android:background="@drawable/login_sumbit_selector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>