<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/gray_e5e5e5"
              android:orientation="vertical">

    <LinearLayout
        android:id="@+id/inbox_layout_unlogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:src="@drawable/inbox_unlogin_ico"/>

        <TextView
            android:id="@+id/unlogin_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/inbox_unlogin_title"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/inbox_unlogin_detail"
            android:textSize="14sp"
            android:textStyle="normal"/>

        <Button
            android:id="@+id/inbox_btn_login"
            style="@style/apply_btn_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/apply_btn_login"
            android:textColor="@color/green_2de3a3_selector"
            />

        <Button
            android:id="@+id/inbox_view_jobs"
            style="@style/apply_btn_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/apply_view_jobs"
            android:textColor="@color/red_ed1055_selector"
            />
    </LinearLayout>

    <include
        android:id="@+id/inbox_hr_message"
        layout="@layout/inbox_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"/>

    <include
        android:id="@+id/inbox_recommand"
        layout="@layout/inbox_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"/>
</LinearLayout>
