<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:paddingRight="5dp"
                android:paddingLeft="5dp"
                android:background="@drawable/login_dialog_bg"
                android:orientation="vertical">

    <TextView
        android:id="@+id/login_dialog_title"
        android:layout_marginTop="14dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textColor="@color/black_000000"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/login_dialog_login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_dialog_title"
        android:layout_marginTop="40dp"
        android:minHeight="0dp"
        android:padding="8dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/bg_drawable_blue_3c5a96"
        android:textSize="16sp"
        android:text="@string/login_with_phone"
        android:textColor="@drawable/login_dialog_text_color"/>

    <Button
        android:id="@+id/login_dialog_register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_dialog_login_btn"
        android:layout_marginTop="20dp"
        android:minHeight="0dp"
        android:padding="8dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/bg_drawable_red_ed1055"
        android:layout_alignRight="@id/login_dialog_login_btn"
        android:layout_alignLeft="@id/login_dialog_login_btn"
        android:text="@string/register_with_phone"
        android:textSize="16sp"
        android:textColor="@drawable/login_dialog_text_color"/>

    <ImageView
        android:id="@+id/login_dialog_close_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:padding="3dp"
        android:src="@drawable/ico_login_dialog_close"/>

</RelativeLayout>